@@ -59,6 +59,7 @@ Date: 2025-12-07
     - Reworked where modules are unlocked, so that the first 2 tiers are unlocked at RNM/P-TM science, while tier 3 is the same and tier 4 is unlocked at AEM/AA-ATM science, and every subsequent module tier will be 1 per pack.
     - Changed tier 4 modules to use special lights, as they were meant to do ages ago.
     - Changed mixed bastanite to take 16 TM ore per craft, instead of 20.
+    - Changed rubidium recipes to take coolant, and output hot coolant.
 
   Fixes:
     - Fixed the tech icons of all battery equipment.
